# future-metrics

./: Cargo.toml  README.md
examples/: basic.rs  metrics.rs  otel.rs
src/: lib.rs
